Fix for overflow

--- a/style.css
+++ b/style.css
@@ -158,5 +158,11 @@ footer{
     .movie-header h1{
         position: absolute;
         bottom: -100px;
+        font-size: 1rem;
+    }
+
+    .movie-header h1 .rating{
+        font-size: 0.8rem;
+        padding: 5px;
     }
 }
